--- a/SMSTool/app/src/main/res/values-zh/strings.xml
+++ b/SMSTool/app/src/main/res/values-zh/strings.xml
@@ -1,39 +1,47 @@
 <resources>
-    <string name="app_name">SMSTool</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
     <string name="spinnerTitle">Retrieving Contacts</string>
     <string name="blank_photo">blank photo</string>
     <string name="total_blank">TOTAL: 0 INCOMING, 0 OUTGOING MESSAGES</string>
     <string name="total">TOTAL: %1$d INCOMING, %2$d OUTGOING MESSAGES</string>
 
-
-    <string name="frm_dt">开始日期:</string>
-    <string name="to_dt">结束日期:</string>
+    <string name="sms_statistics">短信统计</string>
+    <string name="frm_dt">起始日期</string>
+    <string name="to_dt">结束日期</string>
     <string name="pop_hlp_ttl">帮助</string>
     <string name="pop_abt_ttl">关于</string>
-    <string name="dev_name">Droidstein The DNA</string>
+    <string name="dev_name">营盘工作室</string>
     <string name="mail_id">$TBD$</string>
-    <string name="frm_to_err">From date is Future of To Date</string>
+    <string name="frm_to_err">时间不可选</string>
     <string name="Future_Year">Future_Year</string>
     <string name="Future_Month">Future_Month</string>
     <string name="Future_Day">Future_Day</string>
 
-    <string name="name">Name:</string>
-    <string name="name_null">Name can not be null!</string>
-    <string name="phoneNum">Phone:</string>
-    <string name="phone_null">Phone Num can not be null!</string>
-    <string name="sex">Sex:</string>
-    <string name="sex_man">Man</string>
-    <string name="sex_woman">Woman</string>
-    <string name="homeAddress">Home:</string>
-    <string name="companyAddress">Company:</string>
-    <string name="remarks">Remarks:</string>
-    <string name="submit">submit</string>
+    <string name="add_customer">新增用户</string>
+    <string name="customer">用户信息</string>
+    <string name="name">姓名:</string>
+    <string name="name_null">姓名不能为空!</string>
+    <string name="phoneNum">电话:</string>
+    <string name="phone_null">电话不能为空!</string>
+    <string name="sex">性别:</string>
+    <string name="sex_man">男</string>
+    <string name="sex_woman">女</string>
+    <string name="homeAddress">住址:</string>
+    <string name="companyAddress">单位:</string>
+    <string name="remarks">备注:</string>
+    <string name="submit">保存</string>
+    <string name="save_success">保存成功!</string>
+    <string name="tip">提示</string>
+    <string name="user_exist">客户信息已存在!</string>
 
-    <string name="save_success">Save success !</string>
+    <string name="send_sms">发送短信</string>
+    <string name="init">正在加载数据…</string>
+    <string name="data_null">没有查询到相关数据！</string>
+    <string name="customer_null">没有客户数据，请添加客户信息！</string>
+    <string name="sms_contact">联系人</string>
+    <string name="sms_sent">发送(%d)</string>
+    <string name="sms_recieved">接收(%d)</string>
+    <string name="ok">确定</string>
 </resources>
