--- a/SMSTool/app/src/main/res/values/strings.xml
+++ b/SMSTool/app/src/main/res/values/strings.xml
@@ -1,39 +1,90 @@
 <resources>
-    <string name="app_name">SMSTool</string>
+    <string name="app_name">智能查询</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
     <string name="spinnerTitle">Retrieving Contacts</string>
     <string name="blank_photo">blank photo</string>
     <string name="total_blank">TOTAL: 0 INCOMING, 0 OUTGOING MESSAGES</string>
     <string name="total">TOTAL: %1$d INCOMING, %2$d OUTGOING MESSAGES</string>
 
-
-    <string name="frm_dt">From Date:</string>
-    <string name="to_dt">To Date:</string>
-    <string name="pop_hlp_ttl">Help</string>
-    <string name="pop_abt_ttl">About</string>
-    <string name="dev_name">Droidstein The DNA</string>
+    <string name="sms_statistics">信息统计</string>
+    <string name="frm_dt">起始日期</string>
+    <string name="to_dt">结束日期</string>
+    <string name="pop_hlp_ttl">帮助</string>
+    <string name="pop_abt_ttl">关于</string>
+    <string name="dev_name">深圳营盘工作室</string>
     <string name="mail_id">$TBD$</string>
-    <string name="frm_to_err">From date is Future of To Date</string>
+    <string name="frm_to_err">时间不可选</string>
     <string name="Future_Year">Future_Year</string>
     <string name="Future_Month">Future_Month</string>
     <string name="Future_Day">Future_Day</string>
 
-    <string name="name">Name:</string>
-    <string name="name_null">Name can not be null!</string>
-    <string name="phoneNum">Phone:</string>
-    <string name="phone_null">Phone Num can not be null!</string>
-    <string name="sex">Sex:</string>
-    <string name="sex_man">Man</string>
-    <string name="sex_woman">Woman</string>
-    <string name="homeAddress">Home:</string>
-    <string name="companyAddress">Company:</string>
-    <string name="remarks">Remarks:</string>
-    <string name="submit">submit</string>
+    <string name="add_customer">新增用户</string>
+    <string name="customer">用户信息</string>
+    <string name="name">姓名:</string>
+    <string name="name_null">姓名不能为空!</string>
+    <string name="phoneNum">电话:</string>
+    <string name="phone_null">电话不能为空!</string>
+    <string name="sex">性别:</string>
+    <string name="sex_man">男</string>
+    <string name="sex_woman">女</string>
+    <string name="homeAddress">住址:</string>
+    <string name="companyAddress">单位:</string>
+    <string name="remarks">备注:</string>
+    <string name="submit">保存</string>
+    <string name="save_success">保存成功!</string>
+    <string name="tip">提示</string>
+    <string name="user_exist">客户信息已存在!</string>
 
-    <string name="save_success">Save success !</string>
+    <string name="search_customer">查询用户</string>
+    <string name="search_hint">按姓名或电话搜索</string>
+    <string name="search_null">没有查询到相关内容，请重试！</string>
+    <string name="search">查询</string>
+
+    <string name="send_sms">发送内容</string>
+    <string name="init">正在加载数据…</string>
+    <string name="data_null">没有查询到相关数据！</string>
+    <string name="customer_null">没有客户数据，请添加客户信息！</string>
+    <string name="sms_contact">联系人</string>
+    <string name="sms_sent">发送(%d)</string>
+    <string name="sms_recieved">接收(%d)</string>
+    <string name="ok">确定</string>
+
+    <string name="pop_detail">详情</string>
+    <string name="pop_update">修改</string>
+    <string name="pop_del">删除</string>
+    <string name="pop_send">发送</string>
+
+    <string name="send_tip">发送至：</string>
+    <string name="send_tip1" formatted="false">发送至：  %s( %s )</string>
+    <string name="send_tip2">指令内容：</string>
+    <string name="NO.">第</string>
+    <string name="hint_way">1-5</string>
+    <string name="temperature_title">温度报警预定值设置</string>
+    <string name="temperature_way">路温度设置。</string>
+    <string name="temperature_up_open">上限设置开</string>
+    <string name="temperature_up_close">上限设置关</string>
+    <string name="temperature_value_tip">预警值：</string>
+    <string name="temperature_unit">°c</string>
+    <string name="temperature_down_open">下限设置开</string>
+    <string name="temperature_down_close">下限设置关</string>
+
+    <string name="hint_voltage">1-8</string>
+    <string name="voltage_title">电压报警预定值设置</string>
+    <string name="voltage_way">路电压设置。</string>
+    <string name="voltage_unit">V</string>
+
+    <string name="tem_relay_title">温度上下限报警时吸合继电器自控设置</string>
+    <string name="relay_way">路吸合继电器自控设置。</string>
+    <string name="vol_relay_title">电压上下限报警吸合继电器自控设置</string>
+
+    <string name="error_input">输入内容不正确，请重新输入！</string>
+    <string name="error_phone">电话不能为空！</string>
+    <string name="error_order">温度和电压设置路数不能同时为空！</string>
+    <string name="make_order">生成指令</string>
+    <string name="send_order">发送指令</string>
 </resources>
