--- a/SMSTool/app/src/main/res/values/strings.xml
+++ b/SMSTool/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="sex_woman">女</string>
     <string name="homeAddress">住址:</string>
     <string name="companyAddress">单位:</string>
+    <string name="register">注册日期:</string>
+    <string name="date_add">添加日期:</string>
     <string name="remarks">备注:</string>
     <string name="submit">保存</string>
     <string name="save_success">保存成功!</string>
@@ -56,10 +58,12 @@
     <string name="sms_sent">发送(%d)</string>
     <string name="sms_recieved">接收(%d)</string>
     <string name="ok">确定</string>
+    <string name="cancel">取消</string>
 
     <string name="pop_detail">详情</string>
     <string name="pop_update">修改</string>
     <string name="pop_del">删除</string>
+    <string name="pop_del_msg">确定删除该用户信息吗？</string>
     <string name="pop_send">发送内容</string>
 
     <string name="send_tip">发送至：</string>
@@ -91,4 +95,6 @@
     <string name="make_order">生成指令</string>
     <string name="send_order">发送指令</string>
     <string name="new_customer">新用户</string>
+
+    <string name="date_choice">请选择日期:</string>
 </resources>
